
add_subdirectory(AirFlowExampleKST)

add_subdirectory(AirFlowExampleSerial)

add_subdirectory(AndroidAppExample)

add_subdirectory(BloodPressureExample)

add_subdirectory(BodyPositionExample)

add_subdirectory(ECGExampleKST)

add_subdirectory(ECGExampleSerial)

add_subdirectory(EMGExampleKST)

add_subdirectory(EMGExampleSerial)

add_subdirectory(GlucometerExample)

add_subdirectory(GprsSmsSendExample)

add_subdirectory(GSRExampleKST)

add_subdirectory(GSRExampleSerial)

add_subdirectory(IphoneAppExample)

add_subdirectory(LCDExample)

add_subdirectory(PulsioximeterExample)

add_subdirectory(SerialTerminalExample)

add_subdirectory(Server3GConnectionExample)

add_subdirectory(TemperatureExample)

add_subdirectory(ZigBeeCommunicationExample)

